Finalize Rings of Saturn documentation and CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Build documentation
+      run: |
+        mkdocs build --strict
+
     - name: Run tests
       run: |
         pytest
